2013-05-15	The InnoDB Team

	* page/page0zip.c:
	Fix Bug#16736929 PAGE_ZIP_DECOMPRESS() FAILS ON EMPTY RECORD

2013-03-12	The InnoDB Team

	* include/page0zip.ic, page/page0zip.c:
	Fix Bug#16463505 PESSIMISTIC PAGE_ZIP_AVAILABLE()
	MAY CAUSE INFINITE PAGE SPLIT

2013-02-27	The InnoDB Team

	* page/page0zip.c:
	Fix Bug#16400920 INNODB TRIES TO PASS EMPTY BUFFER TO ZLIB,
	GETS Z_BUF_ERROR

2013-01-21	The InnoDB Team

	* buf/buf0buf.c, handler/ha_innodb.cc:
	Fix Bug#16067973 DROP TABLE IS SLOW WHEN IT DECOMPRESSES
	COMPRESSED-ONLY PAGES

2013-01-11	The InnoDB Team
	* row/row0sel.c:
	Fix Bug#16088883 KILLING A QUERY INSIDE INNODB CAUSES IT TO
	EVENTUALLY CRASH WITH AN ASSERTION

2012-12-18	The InnoDB Team

	* include/univ.i:
	Fix Bug#13463493 INNODB PLUGIN WERE CHANGED, BUT STILL USE THE
	SAME VERSION NUMBER 1.0.17

2012-12-13	The InnoDB Team

	* buf/buf0buf.c:
	Fix Bug#14329288 IS THE CALL TO IBUF_MERGE_OR_DELETE_FOR_PAGE FROM
	BUF_PAGE_GET_GEN REDUNDANT?

2012-11-15	The InnoDB Team

	* include/data0type.ic, include/rem0rec.h,
	rem/rem0rec.c, row/row0merge.c:
	Fix Bug#15874001 CREATE INDEX ON A UTF8 CHAR COLUMN FAILS WITH
	ROW_FORMAT=REDUNDANT

2012-10-18	The InnoDB Team

	* row/row0sel.c:
	Fix Bug#14758405: ALTER TABLE: ADDING SERIAL NULL DATATYPE: ASSERTION:
	LEN <= SIZEOF(ULONGLONG)

2012-10-16	The InnoDB Team

	* dict/dict0dict.c, handler/handler0alter.cc, include/dict0dict.h:
	Fix Bug#14729221 IN-PLACE ALTER TABLE REPORTS '' INSTEAD OF REAL
	DUPLICATE VALUE FOR PREFIX KEYS

2012-10-09	The InnoDB Team

	* row/row0mysql.c:
	Fix Bug#14708715 CREATE TABLE MEMORY LEAK ON DB_OUT_OF_FILE_SPACE

2012-09-28	The InnoDB Team

	* include/row0undo.h, row/row0umod.c, row/row0undo.c:
	Fix Bug#13249921 ASSERT !BPAGE->FILE_PAGE_WAS_FREED, USUALLY
	IN TRANSACTION ROLLBACK. This patch will ensure that the
	undo logs will be applied in proper reverse order.

2012-09-18	The InnoDB Team

	* btr/btr0cur.c, handler/ha_innodb.cc, ibuf/ibuf0ibuf.c,
	include/btr0cur.h: