@@ -1,3 +1,9 @@
+2013-08-14	The InnoDB Team
+
+	* btr/btr0cur.c, row/row0uins.c:
+	Fix Bug#16971045 ASSERTION FAILURES ON ROLLBACK OF AN INSERT AFTER
+	A FAILED BLOB WRITE
+
 2013-05-15	The InnoDB Team
 
 	* page/page0zip.c:
